added rows and basic functionality for sample rows in temporal heatmap

--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,19 @@
         </div>
     </div>
     <div class="row">
+        <div class="col-xs-3">
+            <div class="heatmap" id="heatmapSelector">
+
+            </div>
+        </div>
+        <div class="col-xs-9">
+            <div class="heatmap" id="heatmap">
+
+            </div>
+
+        </div>
+    </div>
+    <div class="row">
         <div class="col-xs-12">
             <div class="timeline" id="timeline">
 
