--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>OncoTracer</title>
+    <title>OncoThreads</title>
     <link href="style.css" rel="stylesheet" type="text/css"/>
 </head>
 <body>
@@ -14,10 +14,8 @@
     <div class="row">
         <div class="mainView">
             <div class="variableMenu" id="heatmapSelector">
-
             </div>
             <div class="heatmap" id="heatmap">
-
             </div>
         </div>
     </div>
