update preview card

--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
 
 
       <!-- open graph data -->
-      <meta property="og:title" content="OncoThreads V2">
+      <meta property="og:title" content="OncoThreads V2: Visual Analytics of Clinical Sequences in Patient Cohorts">
       <meta property="og:url" content="http://oncothreads-v2.gehlenborglab.org/">
       <meta property="og:type" content="website">
       <meta property="og:discription" content="OncoThreads is a tool for the visualization of clinical sequence data in patient cohorts. It supports the interactive exploration and ranking of a wide range of clinical features.">
@@ -24,7 +24,7 @@
 
       <!-- Twitter card -->
       <meta property="twitter:card" content="summary">
-      <meta property="twitter:title" content="OncoThreads V2">
+      <meta property="twitter:title" content="OncoThreads V2: Visual Analytics of Clinical Sequences in Patient Cohorts">
       <meta property="twitter:url" content="http://oncothreads-v2.gehlenborglab.org/">
       <meta property="twitter:discription" content="OncoThreads is a tool for the visualization of clinical sequence data in patient cohorts. It supports the interactive exploration and ranking of a wide range of clinical features.">
       <meta property="twitter:image" content="preview.png">
