--- a/public/index.html
+++ b/public/index.html
@@ -1,37 +1,44 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-    <meta charset="utf-8">
-    <title>OncoThreads V2</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link href="style.css" rel="stylesheet" type="text/css"/>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
-          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <link href="lineUp.css" rel="stylesheet" type="text/css"/>
-
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css"
-          integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
-
-
+      <meta charset="utf-8">
+      <title>OncoThreads V2</title>
+      <meta charset="utf-8">
+      <meta name="title" content="OncoThreads V2: Visual Analytics of Clinical Sequences in Patient Cohorts">
+      <meta name="description"
+            content="OncoThreads is a tool for the visualization of clinical sequence data in patient cohorts. It supports the interactive exploration and ranking of a wide range of clinical features.">
+      <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
       <!-- open graph data -->
       <meta property="og:title" content="OncoThreads V2: Visual Analytics of Clinical Sequences in Patient Cohorts">
       <meta property="og:url" content="http://oncothreads-v2.gehlenborglab.org/">
       <meta property="og:type" content="website">
-      <meta property="og:discription" content="OncoThreads is a tool for the visualization of clinical sequence data in patient cohorts. It supports the interactive exploration and ranking of a wide range of clinical features.">
+      <meta property="og:discription"
+            content="OncoThreads is a tool for the visualization of clinical sequence data in patient cohorts. It supports the interactive exploration and ranking of a wide range of clinical features.">
       <meta property="og:image" content="preview.png">
 
       <!-- Twitter card -->
       <meta property="twitter:card" content="summary">
-      <meta property="twitter:title" content="OncoThreads V2: Visual Analytics of Clinical Sequences in Patient Cohorts">
+      <meta property="twitter:title"
+            content="OncoThreads V2: Visual Analytics of Clinical Sequences in Patient Cohorts">
       <meta property="twitter:url" content="http://oncothreads-v2.gehlenborglab.org/">
-      <meta property="twitter:discription" content="OncoThreads is a tool for the visualization of clinical sequence data in patient cohorts. It supports the interactive exploration and ranking of a wide range of clinical features.">
+      <meta property="twitter:discription"
+            content="OncoThreads is a tool for the visualization of clinical sequence data in patient cohorts. It supports the interactive exploration and ranking of a wide range of clinical features.">
       <meta property="twitter:image" content="preview.png">
 
+      <link href="style.css" rel="stylesheet" type="text/css" />
+      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+            integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+      <link href="lineUp.css" rel="stylesheet" type="text/css" />
+
+      <!-- Bootstrap CSS -->
+      <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css"
+            integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
 </head>
+
 <body>
-<div id="app">
-</div>
+      <div id="app">
+      </div>
 </body>
+
 </html>
