--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,22 @@
 <head>
     <meta charset="utf-8">
     <title>OncoThreads</title>
+    <!-- open graph data -->
+    <meta property="og:title" content="OncoThreads: Visualization of Longitudinal Cancer Genomics Data">
+    <meta property="og:url" content="http://oncothreads.gehlenborglab.org/">
+    <meta property="og:type" content="website">
+    <meta property="og:discription"
+          content="OncoThreads is a tool for the visualization of clinical sequence data in patient cohorts. It supports the interactive exploration and ranking of a wide range of clinical and genomics features.">
+    <meta property="og:image" content="preview.png">
+
+    <!-- Twitter card -->
+    <meta property="twitter:card" content="summary">
+    <meta property="twitter:title" content="OncoThreads: Visualization of Longitudinal Cancer Genomics Data">
+    <meta property="twitter:url" content="http://oncothreads.gehlenborglab.org/">
+    <meta property="twitter:discription"
+          content="OncoThreads is a tool for the visualization of clinical sequence data in patient cohorts. It supports the interactive exploration and ranking of a wide range of clinical and genomics features.">
+    <meta property="twitter:image" content="preview.png">
+
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link href="style.css" rel="stylesheet" type="text/css"/>
