--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <meta property="og:type" content="website">
     <meta property="og:discription"
           content="OncoThreads is a tool for the visualization of clinical sequence data in patient cohorts. It supports the interactive exploration and ranking of a wide range of clinical and genomics features.">
-    <meta property="og:image" content="preview.png">
+    <meta property="og:image" content="http://oncothreads.gehlenborglab.org/preview.png">
 
     <!-- Twitter card -->
     <meta property="twitter:card" content="summary">
@@ -17,7 +17,7 @@
     <meta property="twitter:url" content="http://oncothreads.gehlenborglab.org/">
     <meta property="twitter:discription"
           content="OncoThreads is a tool for the visualization of clinical sequence data in patient cohorts. It supports the interactive exploration and ranking of a wide range of clinical and genomics features.">
-    <meta property="twitter:image" content="preview.png">
+    <meta property="twitter:image" content="http://oncothreads.gehlenborglab.org/preview.png">
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
