--- a/public/index.html
+++ b/public/index.html
@@ -12,12 +12,12 @@
     <meta property="og:image" content="http://oncothreads.gehlenborglab.org/preview.png">
 
     <!-- Twitter card -->
-    <meta property="twitter:card" content="summary">
-    <meta property="twitter:title" content="OncoThreads: Visualization of Longitudinal Cancer Genomics Data">
-    <meta property="twitter:url" content="http://oncothreads.gehlenborglab.org/">
-    <meta property="twitter:discription"
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:title" content="OncoThreads: Visualization of Longitudinal Cancer Genomics Data">
+    <meta name="twitter:url" content="http://oncothreads.gehlenborglab.org/">
+    <meta name="twitter:discription"
           content="OncoThreads is a tool for the visualization of clinical sequence data in patient cohorts. It supports the interactive exploration and ranking of a wide range of clinical and genomics features.">
-    <meta property="twitter:image" content="http://oncothreads.gehlenborglab.org/preview.png">
+    <meta name="twitter:image" content="http://oncothreads.gehlenborglab.org/preview.png">
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
