--- a/public/index.html
+++ b/public/index.html
@@ -18,13 +18,13 @@
       <meta property="og:image" content="http://oncothreads-v2.gehlenborglab.org/preview.png">
 
       <!-- Twitter card -->
-      <meta property="twitter:card" content="summary_large_image">
-      <meta property="twitter:title"
+      <meta name="twitter:card" content="summary_large_image">
+      <meta name="twitter:title"
             content="OncoThreads V2: Visual Analytics of Clinical Sequences in Patient Cohorts">
-      <meta property="twitter:url" content="http://oncothreads-v2.gehlenborglab.org/">
-      <meta property="twitter:discription"
+      <meta name="twitter:url" content="http://oncothreads-v2.gehlenborglab.org/">
+      <meta name="twitter:discription"
             content="OncoThreads is a tool for the visualization of clinical sequence data in patient cohorts. It supports the interactive exploration and ranking of a wide range of clinical features.">
-      <meta property="twitter:image" content="http://oncothreads-v2.gehlenborglab.org/preview.png">
+      <meta name="twitter:image" content="http://oncothreads-v2.gehlenborglab.org/preview.png">
 
       <link href="style.css" rel="stylesheet" type="text/css" />
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
