--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <meta property="og:image" content="http://oncothreads.gehlenborglab.org/preview.png">
 
     <!-- Twitter card -->
-    <meta name="twitter:card" content="summary">
+    <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="OncoThreads: Visualization of Longitudinal Cancer Genomics Data">
     <meta name="twitter:url" content="http://oncothreads.gehlenborglab.org/">
     <meta name="twitter:discription"
