--- a/public/index.html
+++ b/public/index.html
@@ -3,27 +3,27 @@
 
 <head>
       <meta charset="utf-8">
-      <title>OncoThreads V2</title>
+      <title>ThreadStates</title>
       <meta charset="utf-8">
-      <meta name="title" content="OncoThreads V2: Visual Analytics of Clinical Sequences in Patient Cohorts">
+      <meta name="title" content="ThreadStates: State-based Visual Analytics of Disease Progression">
       <meta name="description"
-            content="OncoThreads is a tool for the visualization of clinical sequence data in patient cohorts. It supports the interactive exploration and ranking of a wide range of clinical features.">
+            content="ThreadStates is a tool for the visualization of clinical sequence data in patient cohorts. It supports the interactive exploration and ranking of a wide range of clinical features.">
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
       <!-- open graph data -->
-      <meta property="og:title" content="OncoThreads V2: Visual Analytics of Clinical Sequences in Patient Cohorts">
+      <meta property="og:title" content="ThreadStates V2: Visual Analytics of Clinical Sequences in Patient Cohorts">
       <meta property="og:url" content="http://oncothreads-v2.gehlenborglab.org/">
       <meta property="og:type" content="website">
       <meta property="og:discription"
-            content="OncoThreads is a tool for the visualization of clinical sequence data in patient cohorts. It supports the interactive exploration and ranking of a wide range of clinical features.">
+            content="ThreadStates is a tool for the visualization of clinical sequence data in patient cohorts. It supports the interactive exploration and ranking of a wide range of clinical features.">
       <meta property="og:image" content="http://oncothreads-v2.gehlenborglab.org/preview.png">
 
       <!-- Twitter card -->
       <meta name="twitter:card" content="summary_large_image">
       <meta name="twitter:title"
-            content="OncoThreads V2: Visual Analytics of Clinical Sequences in Patient Cohorts">
+            content="ThreadStates V2: Visual Analytics of Clinical Sequences in Patient Cohorts">
       <meta name="twitter:url" content="http://oncothreads-v2.gehlenborglab.org/">
       <meta name="twitter:discription"
-            content="OncoThreads is a tool for the visualization of clinical sequence data in patient cohorts. It supports the interactive exploration and ranking of a wide range of clinical features.">
+            content="ThreadStates is a tool for the visualization of clinical sequence data in patient cohorts. It supports the interactive exploration and ranking of a wide range of clinical features.">
       <meta name="twitter:image" content="http://oncothreads-v2.gehlenborglab.org/preview.png">
 
       <link href="style.css" rel="stylesheet" type="text/css" />
