change name to ThreadStates

--- a/public/index.html
+++ b/public/index.html
@@ -7,24 +7,24 @@
       <meta charset="utf-8">
       <meta name="title" content="ThreadStates: State-based Visual Analytics of Disease Progression">
       <meta name="description"
-            content="ThreadStates is a tool for the visualization of clinical sequence data in patient cohorts. It supports the interactive exploration and ranking of a wide range of clinical features.">
+            content="ThreadStates is a tool for the visual analytics of disease progression. It supports the interactive exploration and ranking of a wide range of clinical features.">
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
       <!-- open graph data -->
-      <meta property="og:title" content="ThreadStates V2: Visual Analytics of Clinical Sequences in Patient Cohorts">
-      <meta property="og:url" content="http://oncothreads-v2.gehlenborglab.org/">
+      <meta property="og:title" content="ThreadStates: State-based Visual Analytics of Disease Progression">
+      <meta property="og:url" content="http://threadstates.gehlenborglab.org/">
       <meta property="og:type" content="website">
       <meta property="og:discription"
-            content="ThreadStates is a tool for the visualization of clinical sequence data in patient cohorts. It supports the interactive exploration and ranking of a wide range of clinical features.">
-      <meta property="og:image" content="http://oncothreads-v2.gehlenborglab.org/preview.png">
+            content="ThreadStates is a tool for the visual analytics of disease progression. It supports the interactive exploration and ranking of a wide range of clinical features.">
+      <meta property="og:image" content="http://threadstates.gehlenborglab.org/preview.png">
 
       <!-- Twitter card -->
       <meta name="twitter:card" content="summary_large_image">
       <meta name="twitter:title"
-            content="ThreadStates V2: Visual Analytics of Clinical Sequences in Patient Cohorts">
-      <meta name="twitter:url" content="http://oncothreads-v2.gehlenborglab.org/">
+            content="ThreadStates: State-based Visual Analytics of Disease Progression">
+      <meta name="twitter:url" content="http://threadstates.gehlenborglab.org/">
       <meta name="twitter:discription"
-            content="ThreadStates is a tool for the visualization of clinical sequence data in patient cohorts. It supports the interactive exploration and ranking of a wide range of clinical features.">
-      <meta name="twitter:image" content="http://oncothreads-v2.gehlenborglab.org/preview.png">
+            content="ThreadStates is a tool for the visual analytics of disease progression. It supports the interactive exploration and ranking of a wide range of clinical features.">
+      <meta name="twitter:image" content="http://threadstates.gehlenborglab.org/preview.png">
 
       <link href="style.css" rel="stylesheet" type="text/css" />
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
